--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -6,6 +6,7 @@
 .module {
     width: 300px;
     height: 300px;
+    cursor: pointer;
 }
 
 .module h1 {
@@ -14,4 +15,16 @@
 
 .module p {
     font-size: 24px;
+}
+
+@media only screen and (min-width: 1024px) {
+
+    .module {
+        width: 600px;
+    }
+
+    .module h1 {
+        font-size: 72px;
+    }
+
 }
