--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*,
+*::before,
+*::after { 
+    margin: 0 !important; 
+    padding: 0 !important; 
+    box-sizing: border-box !important; 
 }
 
 body {
