--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -7,6 +7,9 @@
     width: 300px;
     height: 300px;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: 2;
 }
 
 .module h1 {
