--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     margin: 0 !important; 
     padding: 0 !important; 
     box-sizing: border-box !important; 
+    scroll-behavior: smooth;
 }
 
 body {
