--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .container {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+}
+
+.section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 /* custom css */
