--- a/src/components/Projects/styles.css
+++ b/src/components/Projects/styles.css
@@ -1,3 +1,15 @@
 a {
     text-decoration: none;
 }
+
+.section-title {
+    font-size: 36px;
+}
+
+@media only screen and (min-width: 1024px) {
+
+    .section-title {
+        font-size: 64px;
+    }
+
+}
