--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -20,6 +20,10 @@
     font-size: 24px;
 }
 
+a span:hover, .hero-title span:hover {
+    color: #D800A6;
+}
+
 @media only screen and (min-width: 1024px) {
 
     .module {
