--- a/src/components/TechStack/styles.css
+++ b/src/components/TechStack/styles.css
@@ -5,4 +5,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    cursor: pointer;
+}
+
+.stack-container:hover {
+    transform: scale(1.1);
+    box-shadow: 2px 2px #D800A6;
 }
